fix layout, text readability

--- a/css1.css
+++ b/css1.css
@@ -5346,7 +5346,7 @@ label.panel-block {
       flex-grow: 1;
   -ms-flex-negative: 1;
       flex-shrink: 1;
-  padding: 0.75rem; }
+  padding: 0 0.75rem 0.75rem 0.75rem; }
   .columns.is-mobile > .column.is-narrow {
     -ms-flex: none;
         flex: none; }
@@ -6965,7 +6965,7 @@ label.panel-block {
   padding: 3rem 1.5rem; }
 
 .section {
-  padding: 3rem 1.5rem; }
+  padding: 1.5rem; }
   @media screen and (min-width: 1024px) {
     .section.is-medium {
       padding: 9rem 1.5rem; }
@@ -6991,23 +6991,51 @@ label.panel-block {
   -ms-flex-pack: center;
       justify-content: center;
   display: -ms-flexbox;
-  display: flex; }
+  /*display: flex;*/
+  background: white;
+  margin: 0 0.75rem;
+  padding: 0.25rem;
+}
 
 .card.bag-card .card-content {
   padding: 1rem; }
 
 .page-title {
   font-family: 'Abril Fatface', cursive;
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .card-footer-item.owner-box {
   padding: 0.25rem; 
 }
 
-#info {
+#faq {
     background: #ffffff;
     opacity: 0.85;
-    padding: 1em;
-    margin-left: 8.33333%;
-    margin-right: 16.66667%;
+    padding: 0.75rem 1.5rem 1.5rem 1.5rem;
+    margin: 0 1.5rem;
+  }
+
+  .sales {
+    background: rgba(255,255,255,0.8);
+    padding: 0.75rem;
+    margin: 0 1.5rem 1.5rem 1.5rem;
+  }
+
+  .spacer {
+    padding: 0.75rem;
+    margin: 0 1.5rem 1.5rem 1.5rem;
+  }
+
+  #info {
+    padding: 0rem 1.5rem !important;
+  }
+
+  .sub-title, .sub-title2 {
+    background: rgba(255, 255, 255, 0.8);
+  }
+
+  .sub-title2 {
+    margin-bottom: 0.75rem;
+    padding-bottom: 0.75rem;
   }
